--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = lisa_beauty_saloon
+PRODUCT_NAME = lisa_beauty_salon
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.centrictech.lisaBeautySaloon
+PRODUCT_BUNDLE_IDENTIFIER = com.centrictech.lisaBeautysalon
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2025 com.centrictech. All rights reserved.
