--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: lisa_beauty_saloon
-description: "Lisa Beauty Saloon Project"
+name: lisa_beauty_salon
+description: "Lisa Beauty Salon Project"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
