--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,8 @@ dependencies:
   dio: ^5.9.0
   equatable: ^2.0.7
   flutter_secure_storage: ^9.2.4
-  firebase_core: ^4.1.0
-  firebase_auth: ^6.0.2
+#  firebase_core: ^4.2.1
+#  firebase_auth: ^6.1.2
   google_sign_in: ^7.1.1
   sign_in_with_apple: ^7.0.1
   get: ^4.7.3
