--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_html: ^3.0.0
   syncfusion_flutter_charts: ^31.2.18
   emoji_picker_flutter: ^4.4.0
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
