--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   syncfusion_flutter_charts: ^31.2.18
   emoji_picker_flutter: ^4.4.0
   url_launcher: ^6.3.2
+  device_preview: ^1.3.1
 
 dev_dependencies:
   flutter_test:
